<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/app_name" />
        <Button
            android:id="@+id/make_room_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_room"/>
        <Button
            android:id="@+id/enjoy_room_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enjoy_room"/>
    </LinearLayout>

</FrameLayout>